--- a/GAble.cabal
+++ b/GAble.cabal
@@ -8,7 +8,7 @@ version:             0.1.0.0
 -- description:
 -- bug-reports:
 -- license:
-license-file:        LICENSE
+license-file:
 author:              
 maintainer:          
 -- copyright:
@@ -16,8 +16,8 @@ maintainer:
 build-type:          Simple
 extra-source-files:  README.md
 
-executable GAble
-  main-is:             GAble.hs
+executable Gable
+  main-is:             Gable.hs
   -- other-modules:
   -- other-extensions:
   build-depends:
